<?xml version="1.0"?>
<package>
  <name>dfcompass_driver</name>
  <version>0.0.1</version>
  <description>The dfcompass_driver package</description>

  <maintainer email="igor.ch75@gmail.com">Igor Chernyshev</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dfcompass_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>roboteq_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>
</package>
